# TravellingSalesmanProblemBruteForce

./: CMakeLists.txt  Config.cpp  Config.h  DataGenerator.cpp  DataGenerator.h  ProblemSolver.cpp  ProblemSolver.h  Runner.cpp  Runner.h  config.json  main.cpp  matrix_11x11.atsp  matrix_6x6.atsp  matrix_8x8.atsp
